# index-tts

./: .cursorignore  .dockerignore  .gitignore  AGENTS.md  DOCKER.md  DOCKER_README.md  Dockerfile  Dockerfile.devel  README.md  UI使用说明.md  app.bat  docker-compose.yaml  docker-compose.yml  docker-entrypoint.sh  dockerfile  findings.md  gui.py  progress.md  pyproject.toml  requirements-linux.txt  requirements-win.txt  requirements.txt  run.bat  run_ui.bat  run_webui.bat  run_webui.sh  run_webui_deepseed.sh  task_plan.md  test-docker.sh  ui.py  webui.py  webui.sh  启动WebUI.bat  运行.bat  运行UI.bat
examples/: manager.py
indextts/: infer.py  infer_v2.py
indextts/utils/: common.py  front.py
prompts/: .gitignore
ui/: __init__.py  config.py
ui/controllers/: __init__.py  inference_base.py  inference_worker.py  multi_role_inference.py  multi_role_worker.py  single_role_inference.py  single_role_worker.py
ui/models/: __init__.py  audio_processor.py  character_manager.py  compat.py  config_manager.py  file_manager.py  inference_processor.py  inference_strategy.py  text_processor.py
ui/utils/: text_processor.py
ui/views/: __init__.py  audio_player.py  custom_widgets.py  main_window.py
webui/: README.md  __init__.py  app.py  text_replace_rules.txt  webui开发计.md
webui/components/: __init__.py  audio_player.py  log_display.py  prompt_selector.py  text_input.py
webui/config/: __init__.py  settings.py  text_replace_config.txt
webui/models/: __init__.py  character_manager.py
webui/services/: __init__.py  config_service.py  enhanced_tts_service.py  file_service.py  (+2 more)
(+10 files in other folders)
