[project]
name = "index-tts"
version = "0.1.0"
description = "a tts model based on index-tts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate==0.25.0",
    "cn2an==0.5.22",
    "cython==3.0.7",
    "deepspeed>=0.16.8",
    "ffmpeg-python==0.2.0",
    "g2p-en==2.1.0",
    "gradio>=5.30.0",
    "jieba==0.42.1",
    "keras==2.9.0",
    "librosa>=0.11.0",
    "matplotlib==3.8.2",
    "ninja>=1.11.1.4",
    "numba==0.58.1",
    "numpy==1.26.2",
    "omegaconf>=2.3.0",
    "opencv-python==4.9.0.80",
    "pandas==2.1.3",
    "sentencepiece>=0.2.0",
    "tensorboard==2.9.1",
    "tokenizers==0.15.0",
    "torch",
    "torchaudio",
    "tqdm>=4.67.1",
    "transformers==4.36.2",
    "vocos==0.1.0",
    "wetextprocessing>=1.0.4.1",
]


[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128/"
# Set explicit = true for the PyTorch index as well.
explicit = true

[tool.uv.sources]
"torch" = { index = "pytorch" }
"torchaudio" = { index = "pytorch" }


[tool.ruff]
lint.ignore = ["E402"]

[dependency-groups]
dev = [
    "huggingface-hub[cli]>=0.31.2",
]
